--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,13 +3,16 @@
 @tailwind utilities;
 
 :root {
-  --background: #ffffff;
+  --background: #0b0e15;
   --foreground: #171717;
+  --primary-button: #009da2;
+  --hover-text-color: #00d4db;
+  --secondary-text-color: #009da2;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
+    --background: #0b0e15;
     --foreground: #ededed;
   }
 }
